--- a/chat.html
+++ b/chat.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"
     />
+    <link rel="stylesheet" href="styles.css" />
     <title>CHAT | KAKAO CLONE</title>
   </head>
   <body>
