--- a/friends.html
+++ b/friends.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"
     />
+    <link rel="stylesheet" href="styles.css" />
     <title>FRIENDS | KAKAO CLONE</title>
   </head>
   <!-- BODY == VISIBLE TO END USER -->
