--- a/find.html
+++ b/find.html
@@ -82,7 +82,7 @@
         </h5>
         <li class="friends_freind friend friend--lg">
           <div class="friend__column">
-            <img src="images/rhm.jpg" class="g-avatar friend__avatar" />
+            <img src="images/rhm.jpg" class="friend__avatar" />
             <div class="friend__content">
               <div class="friend__name">
                 노무현
