--- a/index.html
+++ b/index.html
@@ -46,17 +46,24 @@
       <ul class="chats__list">
         <li class="chats_chat chat">
           <a href="chat.html">
-            <div class="chat__column">
-              <img class="chat__avatar g-avatar" src="images/download.jpg" />
-              <div class="chat__content">
-                <span class="chat__username">
-                  Hong Jin Kee
-                </span>
-                <span class="chat__preview">Going Home</span>
+            <div class="chats__chat friend friend--lg">
+              <div class="friend__column">
+                <img src="images/rhm.jpg" class="m-avatar friend__avatar" />
+                <div class="friend__content">
+                  <div class="friend__name">
+                    노무현
+                  </div>
+                  <span class="friend__bottom-text">
+                    그..위에 사람들은 뭐해서..떡사먹었느냐!
+                  </span>
+                </div>
               </div>
-            </div>
-            <div class="chat__column">
-              <span class="chat__timestamp">Yesterday</span>
+              <div class="friend__column">
+                 <span class="chat__timestamp">
+                   23th May
+                 </span>
+                </div>
+              </div>
             </div>
           </a>
         </li>
@@ -72,6 +79,7 @@
         </li>
         <li class="nav__list-item">
           <a href="index.html" class="nav__list-link">
+            <div class="nav_badge">8</div>
             <i class="fas fa-comment"></i>
           </a>
         </li>
