--- a/more.html
+++ b/more.html
@@ -44,7 +44,7 @@
         </span>
       </div>
     </header>
-    <mian class="more">
+    <main class="more">
       <header class="more__header">
         <div class="friends_freind friend friend--lg">
           <div class="friend__column">
@@ -56,12 +56,10 @@
               <span class="friend_status">
                   thisisforex@gmail.com             
                  </span>
-                 <i class="far fa-comment-alt fa-2x"></i>
             </div>
           </div>
           <div class="friend__column">
-            
-              
+              <i class="far fa-comment-alt fa-2x"></i>
             </div>
           </div>
         </div>
@@ -98,7 +96,7 @@
         <ul class="more__suggestions-list">
           <li class="more__suggestion suggestions">
             <span class="suggestion__icon">
-              <i class="fas fa-quote-right fa-2x"></i>
+              <i class="fas fa-quote-right "></i>
             </span>
             <span class="suggestion__title">
               Kakao Story
@@ -106,7 +104,7 @@
           </li>
           <li class="more__suggestion suggestions">
               <span class="suggestion__icon">
-                <i class="fas fa-beer fa-2x"></i>
+                <i class="fas fa-beer "></i>
               </span>
               <span class="suggestion__title">
                 Kakao Friends
@@ -114,7 +112,7 @@
             </li>
             <li class="more__suggestion suggestions">
                 <span class="suggestion__icon">
-                  <i class="fas fa-gamepad fa-2x"></i>
+                  <i class="fas fa-gamepad "></i>
                 </span>
                 <span class="suggestion__title">
                   Friends Gem
