--- a/setting.html
+++ b/setting.html
@@ -10,6 +10,7 @@
       href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"
     />
     <title>SETTINGS | KAKAO CLONE</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="status-bar">
@@ -26,9 +27,6 @@
     </div>
     <header class="header">
       <div class="header__header-column">
-        <a href="more.html" class="header__back-btn">
-          <i class="fas fa-arrow-left fa-2x"></i>
-        </a>
         <h1 class="header__title">Settings</h1>
       </div>
 
@@ -42,8 +40,10 @@
       <section class="setting__sections">
         <ul class="settings__list">
           <li class="settings__setting">
-            <span class="settings__icon"> <i class="fas fa-lock "></i></span
-            ><span class="settings__title">Privacy</span>
+            <span class="settings__icon">
+              <i class="fas fa-lock "></i>
+            </span>
+            <span class="settings__title">Privacy</span>
           </li>
           <li class="settings__setting">
             <span class="settings__icon"> <i class="far fa-bell"></i> </span
