--- a/chat.html
+++ b/chat.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="styles.css" />
     <title>CHAT | KAKAO CLONE</title>
   </head>
-  <body>
+  <body class="chats-body">
     <div class="status-bar">
       <div class="status-bar__column">
         <span class="status-bar__clock">13:54 </span>
@@ -28,7 +28,7 @@
     <header class="header">
       <div class="header__header-column">
         <a href="index.html" class="header__back-btn">
-          <i class="fas fa-arrow-left fa-2x"></i>
+          <i class="fas fa-arrow-left"></i>
         </a>
         <h1 class="header__title">노무현</h1>
       </div>
@@ -36,26 +36,25 @@
       <div class="header__header-column">
         <span class="header__icon">
           <i class="fas fa-search"></i>
-          <div class="header__icon">
+          <span class="header__icon">
             <i class="fas fa-bars"></i>
-          </div>
+          </span>
         </span>
       </div>
     </header>
-    <main class="chat">
+    <main class="chat-screen">
       <ul class="chat__messages">
         <span class="chat__timestamp">
           -----------------Friday, January 11,2019-----------------
         </span>
         <li class="incoming-message message">
-          <img src="images/rhm.jpg" class="g-avatar message__avatar" />
+          <img src="images/rhm.jpg" class="m-avatar message__avatar" />
           <div class="message__content">
-            <span class="message__author">노무현</span>
             <div class="message__bubble">떡 사먹었느냐!</div>
+            <span class="message__author">노무현</span>
           </div>
-          <span class="message__timestamp"></span>
         </li>
-        <li class="incoming-message message">
+        <li class="sent-message message">
           <div class="message__content">
             <span class="message__timestamp"></span>
             <div class="message__bubble">아니 애비가 누구야? 뭐 애비?</div>
@@ -64,7 +63,9 @@
       </ul>
     </main>
     <div class="chat__write">
-      <div class="chat__write--column"><i class="far fa-plus-square"></i></div>
+      <div class="chat__write--column">
+        <i class="far fa-plus-square"></i>
+      </div>
       <div class="chat__write--column">
         <input
           type="text"
