--- a/friends.html
+++ b/friends.html
@@ -40,10 +40,11 @@
         </span>
       </div>
     </header>
+
     <main class="friends">
       <div class="friend__column">
           <header class="freinds__header">
-              <div class="friends_freind friend friend--lg">
+              <div class="friends_freind friend ">
                 <img src="images/download.jpg" class="g-avatar friend__avatar" />
                 <div class="friend__content">
                   <span class="friend__name">
@@ -58,11 +59,11 @@
       </header>
       <div class="freind__plus">
         <h5 class="freinds__title">
-          PLUS FRIENDS
+         Plus friend
         </h5>
         <div class="friends_freind friend friend">
           <div class="friend__column">
-              <img src="images/chamgun.jpg" class="g-avatar friend__avatar" />
+              <img src="images/chamgun.jpg" class="friend__avatar" />
               <div class="friend__content">
                 <span class="friend__name">
                   국방부
@@ -72,11 +73,11 @@
           </div>
         </div>
       <ul class="friends_list">
-        <h5 class="freinds__title">FRIENDS 14</h5>
+        <h5 class="freinds__title">Friends 14</h5>
       
       <li class="friends_freind friend friend--lg">
         <div class="friend__column">
-        <img src="images/rhm.jpg" class="g-avatar friend__avatar" />
+        <img src="images/rhm.jpg" class="friend__avatar" />
         <div class="friend__content">
           <div class="friend__name">
             노무현
@@ -90,8 +91,9 @@
         <div class="friend__now-listening">
           <span>
              FTISLAND - 지독하게
+             <i class="fas fa-play"></i>
           </span>
-         <i class="fas fa-play"></i>
+        
         </div>
       </div>
       </li>
