media Query added
yeiy we can make web-page covered by instruction sentece if size of our page over the min-size we set awesome!

--- a/chat.html
+++ b/chat.html
@@ -75,5 +75,8 @@
         <span class="chat__write-icon"><i class="fas fa-microphone"></i></span>
       </div>
     </div>
+    <div class="bigScreen">
+      <span class="bigScreen">Please Make Your Screen Small!</span>
+    </div>
   </body>
 </html>
