--- a/setting.html
+++ b/setting.html
@@ -56,5 +56,8 @@
         </ul>
       </section>
     </main>
+    <div class="bigScreen">
+      <span class="bigScreen">Please Make Your Screen Small!</span>
+    </div>
   </body>
 </html>
