--- a/find.html
+++ b/find.html
@@ -120,5 +120,8 @@
         </li>
       </ul>
     </nav>
+    <div class="bigScreen">
+      <span class="bigScreen">Please Make Your Screen Small!</span>
+    </div>
   </body>
 </html>
