--- a/friends.html
+++ b/friends.html
@@ -124,5 +124,8 @@
         </li>
       </ul>
     </nav>
+    <div class="bigScreen">
+      <span class="bigScreen">Please Make Your Screen Small!</span>
+    </div>
   </body>
 </html>
