--- a/more.html
+++ b/more.html
@@ -146,5 +146,8 @@
         </li>
       </ul>
     </nav>
+    <div class="bigScreen">
+      <span class="bigScreen">Please Make Your Screen Small!</span>
+    </div>
   </body>
 </html>
