--- a/more.html
+++ b/more.html
@@ -147,7 +147,7 @@
       </ul>
     </nav>
     <div class="bigScreen">
-      <span class="bigScreen">Please Make Your Screen Small!</span>
+      <span class="bigScreen">Please Make Your Screen Small! :) </span>
     </div>
   </body>
 </html>
