--- a/setting.html
+++ b/setting.html
@@ -57,7 +57,7 @@
       </section>
     </main>
     <div class="bigScreen">
-      <span class="bigScreen">Please Make Your Screen Small!</span>
+      <span class="bigScreen">Please Make Your Screen Small! :) </span>
     </div>
   </body>
 </html>
